@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{595, 71}, {1177, 1089}}</string>
+	<string>{{503, 80}, {829, 948}}</string>
 </dict>
 </plist>
