@@ -1,3 +1,7 @@
+2007-07-02  Satoshi Nakagawa <artension@gmail.com>
+
+	Changed to wrap float return value of getDblTime with NSNumber.
+
 2007-06-29  Satoshi Nakagawa <artension@gmail.com>
 
 	Changed to ignore empty input for input buffer.
